feat: reading texture

--- a/Dams3D.vcxproj.filters
+++ b/Dams3D.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EBO.h">
@@ -55,5 +58,13 @@
     <Filter Include="Resource Files\Shaders">
       <UniqueIdentifier>{b3d38f8d-8884-4507-a64d-9614392abc85}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Textures">
+      <UniqueIdentifier>{43c1e6cc-63c3-4be2-833b-612ea3b1060d}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\Downloads\wario_tex_512.png">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
