feat: add diffuse, specular and ambiant lightning

--- a/Dams3D.vcxproj
+++ b/Dams3D.vcxproj
@@ -158,6 +158,8 @@
   <ItemGroup>
     <None Include="default.frag" />
     <None Include="default.vert" />
+    <None Include="light.frag" />
+    <None Include="light.vert" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\..\Downloads\serious_cat_512_8RGB.png" />
